# Yolo11_auto_train

./: .coverage  .flake8  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  DEPENDENCIES.md  Dockerfile  LED_A_position.yaml  LED_A_position1.yaml  LED_B_position.yaml  LICENSE  README.md  _tmp_patch.diff  _tmp_test.py  _tmp_thread.py  debug_registry.py  debug_wizard_config.py  docker-compose.yml  mkdocs.yml  mlflow.db  original_gui_utf8.txt  patch_detection_config.py  pyproject.toml  requirements-dev.in  requirements-dev.txt  requirements.in  requirements.txt  requirements_snapshot_20260107.txt  start.bat  start_env.bat  tmp_block.txt  tmp_main.txt
.github/workflows/: ci.yml  release.yml
configs/: default_pipeline.yaml  demo_doctor.yaml  gui_presets.yaml  predefined_classes.txt
data/split/: data.yaml
data/split/train/: labels.cache
data/split/val/: labels.cache
deploy/: Dockerfile.optimized  docker-compose.yml
docs/: ARCHITECTURE.md  CODE_QUALITY_CHECKS.md  CONTRIBUTING.md  INTEGRATION_GUIDE.md  config_reference.md  improvement_plan.md  index.md  package_overview.md
docs/api/: augmentation.md  config.md  pipeline.md  tasks.md
docs/guides/: quickstart.md
models/led_qc/: default_config.json  enhanced_model.json
models/yolo/: detection_config.yaml  position_config.yaml
picture_tool/: README.md  Yolo11_Auto_Train_GUI.py  Yolo11_Auto_Train_GUI.py.bak  __init__.py  config.yaml  gui.py  main_pipeline.py  pyproject.toml  start.bat
picture_tool/Picture_Annotator/: YOLOAutoAnnotator.py  config.yaml  start.bat
picture_tool/archive/Picture_Annotator/: Bmp_to_png.py  Image_AutoAnnotator.py  train_test_split_tool.py
picture_tool/archive/mask_make/: generate_anomaly_mask.py  generate_anomaly_mask_v2.py  mask_make_v2.py  mask_make_v3.py  mask_make_v4.py
picture_tool/archive/shims/: anomaly_mask_generator.py  dataset_splitter.py  image_augmentor.py  image_format_converter.py  yolo_data_augmentor.py
picture_tool/archive/tools/: compare_and_delete_images.py
picture_tool/gui/: custom_widgets.py  layout_builder.py  led_qc_manager.py  metrics_dashboard.py  pipeline_controller.py  pipeline_validation.py  position_settings_dialog.py  preset_manager.py  task_thread.py
picture_tool/mask_make/: config.json
picture_tool/picture_tool/: __init__.py
picture_tool/picture_tool/anomaly/: __init__.py  anomaly_mask_generator.py
picture_tool/picture_tool/augment/: image_augmentor.py  yolo_data_augmentor.py
picture_tool/picture_tool/color/: led_qc_enhanced.py
picture_tool/picture_tool/eval/: __init__.py  yolo_evaluator.py
picture_tool/picture_tool/format/: __init__.py  image_format_converter.py
picture_tool/picture_tool/infer/: __init__.py  batch_infer.py
picture_tool/picture_tool/pipeline/: __init__.py
picture_tool/picture_tool/position/: __init__.py  yolo_position_validator.py
picture_tool/picture_tool/quality/: __init__.py  dataset_linter.py
picture_tool/picture_tool/report/: __init__.py  report_generator.py
picture_tool/picture_tool/split/: dataset_splitter.py
picture_tool/picture_tool/train/: __init__.py  yolo_trainer.py
picture_tool/picture_tool/utils/: __init__.py  io_utils.py  logging_utils.py
reports/led_qc/single/: sample_result.json
reports/lint/: lint.csv  summary.md
reports/report_train_20250915_135442/: report.md
reports/report_train_20250915_141953/: report.md
reports/report_train_20250915_150136/: report.md
reports/report_train_20250915_154335/: report.md
reports/report_train_20251007_145456/: report.md
reports/report_train_20251008_102101/: report.md
reports/report_train_20251008_170531/: report.md
reports/report_train_20251009_112712/: report.md
requirements/: requirements-dev.in  requirements-dev.txt  requirements.txt
runs/detect/train/: args.yaml  results.csv
runs/detect/train2/: args.yaml
runs/detect/train3/: args.yaml
runs/detect/train4/: args.yaml
runs/detect/train5/: args.yaml
runs/detect/train6/: args.yaml
scripts/: check_code.ps1  check_code.py  start.bat  start_env.bat  test_import.py  verify_sam2.py
src/picture_tool/: __init__.py  cli.py  config_loader.py  config_validation.py  constants.py  doctor.py  exceptions.py  main_pipeline.py  path_resolver.py  preset_config.yaml  serve.py  validation.py
src/picture_tool/anomaly/: anomaly_mask_generator.py
src/picture_tool/augment/: __init__.py  image_augmentor.py  yolo_data_augmentor.py
src/picture_tool/color/: __init__.py  color_inspection.py  color_verifier.py  led_qc_enhanced.py
src/picture_tool/eval/: yolo_evaluator.py
src/picture_tool/format/: image_format_converter.py
src/picture_tool/gui/: __init__.py  annotation_methods.py  annotation_panel.py  annotation_tracker.py  app.py  color_panel.py  config_editor.py  (+13 more)
tests/: conftest.py  reproduce_onnx_export.py  test_annotation_panel.py  test_anomaly_module.py  test_color_inspection_core.py  test_color_inspection_smoke.py  test_color_integration.py  test_color_verifier.py  test_config_loader.py  test_data_processing_features.py  test_dataset_smoke.py  test_dataset_splitter_module.py  test_detection_config_full.py  test_doctor.py  test_dvc_wrapper.py  test_experiment_tracker.py  test_full_pipeline_dryrun.py  test_gui_app.py  test_image_augmentor.py  test_image_format_converter.py  test_led_qc_enhanced_core.py  test_led_qc_smoke.py  test_model_manager.py  test_new_features.py  test_normalization_full.py  test_onnx_export_robustness.py  test_onnx_exporter_full.py  test_path_resolver.py  test_pipeline_controller.py  test_pipeline_core.py  test_pipeline_core_extended.py  test_pipeline_skip.py  test_position_config_gen.py  test_qc_features.py  test_qc_summary.py  test_quality_schemas.py  test_refactored_modules.py  test_serve.py  test_tasks_and_utils_features.py  test_tasks_integration.py  (+8 more)
yolov11_train/: Dockerfile  convert_labels.py  data.yaml  merge_yolo_datasets.py  requirements.txt  yolo11_onnx_inference.py  yolo11_train.py
(+527 files in other folders)
